@@ -1,8 +1,10 @@
 // Copyright (C) 2007 Anders Logg and Garth N. Wells.
 // Licensed under the GNU LGPL Version 2.1.
 //
+// Modified by Kristian Oelgaard, 2007
+//
 // First added:  2007-04-10
-// Last changed: 2007-08-18
+// Last changed: 2007-10-28
 
 #ifndef __DIRICHLET_BC_H
 #define __DIRICHLET_BC_H
@@ -11,6 +13,7 @@
 #include <dolfin/SubSystem.h>
 #include <dolfin/MeshFunction.h>
 #include <dolfin/BoundaryCondition.h>
+#include <dolfin/Facet.h>
 
 namespace dolfin
 {
@@ -21,7 +24,17 @@ namespace dolfin
   class Form;
   class GenericMatrix;
   class GenericVector;
-
+  
+  /// The BCMethod variable may be used to specify the type of method
+  /// used to identify degrees of freedom on the boundary. Either a
+  /// topological approach (default) or a geometrical approach may be
+  /// used. The topological approach is faster, but will only identify
+  /// degrees of freedom that are located on a facet that is entirely
+  /// on the boundary. In particular, the topological approach will
+  /// not identify degrees of freedom for discontinuous elements
+  /// (which are all internal to the cell).
+  enum BCMethod {topological, geometrical};
+  
   /// This class specifies the interface for setting (strong)
   /// Dirichlet boundary conditions for partial differential
   /// equations,
@@ -47,23 +60,27 @@ namespace dolfin
     /// Create boundary condition for sub domain
     DirichletBC(Function& g,
                 Mesh& mesh,
-                SubDomain& sub_domain);
+                SubDomain& sub_domain,
+                BCMethod method = topological);
 
     /// Create boundary condition for sub domain specified by index
     DirichletBC(Function& g,
-                MeshFunction<uint>& sub_domains, uint sub_domain);
+                MeshFunction<uint>& sub_domains, uint sub_domain,
+                BCMethod method = topological);
 
     /// Create sub system boundary condition for sub domain
     DirichletBC(Function& g,
                 Mesh& mesh,
                 SubDomain& sub_domain,
-                const SubSystem& sub_system);
-    
+                const SubSystem& sub_system,
+                BCMethod method = topological);
+
     /// Create sub system boundary condition for sub domain specified by index
     DirichletBC(Function& g,
                 MeshFunction<uint>& sub_domains,
                 uint sub_domain,
-                const SubSystem& sub_system);
+                const SubSystem& sub_system,
+                BCMethod method = topological);
 
     /// Destructor
     ~DirichletBC();
@@ -107,6 +124,23 @@ namespace dolfin
     // Sub system
     SubSystem sub_system;
 
+    // Search method
+    BCMethod method;
+
+    // Compute boundary values for facet (topological approach)
+    void computeBCTopological(std::map<uint, real>& boundary_values,
+                              Facet& facet,
+                              BoundaryCondition::LocalData& data);
+    
+    // Compute boundary values for facet (geometrical approach)
+    void computeBCGeometrical(std::map<uint, real>& boundary_values,
+                              Facet& facet,
+                              BoundaryCondition::LocalData& data);
+    
+    // Check if the point is in the same plane as the given facet
+    //    static bool onFacet(const Point& p, Cell& facet);
+    static bool onFacet(real* coordinates, Facet& facet);
+    
   };
 
 }
